:rocket: Add API basics from older projects

--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,8 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm+all,node,database
+
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
