--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
+    "@nestjs/throttler": "^5.1.2",
     "@prisma/client": "5.13.0",
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
