--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "owr-api",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
   "description": "",
   "author": "",
   "private": true,
