--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
   "dependencies": {
     "@fastify/helmet": "^11.1.1",
     "@fastify/static": "^7.0.4",
-    "@nestjs/common": "^10.3.9",
+    "@nestjs/common": "^10.3.10",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.9",
-    "@nestjs/platform-fastify": "^10.3.9",
+    "@nestjs/core": "^10.3.10",
+    "@nestjs/platform-fastify": "^10.3.10",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
-    "@nestjs/throttler": "^5.1.2",
-    "@prisma/client": "5.15.0",
+    "@nestjs/throttler": "^5.2.0",
+    "@prisma/client": "5.16.1",
     "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "fastify": "^4.27.0",
+    "fastify": "4.28.0",
     "jsdom": "^24.1.0",
     "jszip": "^3.10.1",
-    "prisma": "^5.15.0",
+    "prisma": "^5.16.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
@@ -45,24 +45,24 @@
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.9",
+    "@nestjs/testing": "^10.3.10",
     "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.4",
+    "ts-jest": "^29.1.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   },
   "jest": {
     "moduleFileExtensions": [
