--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "@fastify/helmet": "^11.1.1",
     "@fastify/static": "^7.0.4",
     "@nestjs/common": "^10.3.10",
@@ -41,7 +42,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
-    "swagger-themes": "^1.4.3"
+    "swagger-themes": "^1.4.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
@@ -51,6 +53,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.9",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
     "eslint": "8.57.0",
