:lock: Improve session security

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ PREFIX="api/v1/"
 ADMIN_KEY="admin"
 COOKIE_SECRET="cookie"
 SECURE_COOKIE="false"
+SESSION_EXPIRATION=1209600# In seconds
+MAX_SESSIONS=5
