--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ S3_REGION=region
 S3_ACCESS_KEY=access_key_id
 S3_SECRET_KEY=secret_access_key
 S3_BUCKET_NAME=bucket_name
+
+# Migration
+S3_MIGRATION_BATCH_SIZE=20
