--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ S3_REGION=region
 S3_ACCESS_KEY=access_key_id
 S3_SECRET_KEY=secret_access_key
 S3_BUCKET_NAME=bucket_name
+S3_STORAGE_CLASS=STANDARD
 
 # Migration
 S3_BATCH_SIZE=20
