--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.10",
     "@nestjs/platform-fastify": "^10.3.10",
+    "@nestjs/platform-socket.io": "^10.4.6",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^5.2.0",
+    "@nestjs/websockets": "^10.4.6",
     "@prisma/client": "5.16.1",
     "axios": "^1.7.2",
     "class-transformer": "^0.5.1",
@@ -37,10 +39,12 @@
     "jsdom": "^24.1.0",
     "jszip": "^3.10.1",
     "minio": "^8.0.1",
+    "nestjs-asyncapi": "^1.3.0",
     "prisma": "^5.16.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.4",
+    "socket.io": "^4.8.1",
     "swagger-themes": "^1.4.3"
   },
   "devDependencies": {
