--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - main
+      - staging
 
 
 jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
         with:
