:sparkles: Enhance webtoon parsing with language filtering and optional image handling

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ S3_STORAGE_CLASS=STANDARD
 
 # Migration
 S3_BATCH_SIZE=20
+
+# Parsers
+IGNORED_LANGUAGES=#separated by comma (;)
+WEBTOON_CANVAS_MAX_PAGES=#max parsed pages for webtoon canvas
