:sparkles: Refactor Docker setup and enhance MiscModule with new utilities

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,9 @@
-node_modules
-npm-debug.log
-pnpm-debug.log
-.DS_Store
-.git
-.gitignore
-dist
-.env
-.cache
-images
+node_modules/
+.git/
+dist/
+
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
+public_answers/
