--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/src/app",
-        "lint": "eslint . --fix"
+        "start": "bun nest start",
+        "start:dev": "bun --hot ./src/app.ts",
+        "start:prod": "bun dist/src/app",
+        "lint:fix": "eslint . --fix"
     },
     "dependencies": {
         "@fastify/helmet": "^13.0.1",
@@ -37,13 +36,15 @@
         "rxjs": "^7.8.2",
         "sharp": "^0.33.5",
         "socket.io": "^4.8.1",
-        "swagger-themes": "^1.4.3"
+        "swagger-themes": "^1.4.3",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^11.0.5",
         "@nestjs/schematics": "^11.0.2",
         "@nestjs/testing": "^11.0.12",
         "@stylistic/eslint-plugin": "^4.2.0",
+        "@types/bun": "^1.2.8",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^22.13.10",
         "@typescript-eslint/parser": "^8.27.0",
@@ -56,6 +57,6 @@
         "typescript": "^5.8.2"
     },
     "prisma": {
-        "seed": "ts-node prisma/seed.ts"
+        "seed": "bun prisma/seed.ts"
     }
 }
