--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
-        "start": "bun nest start",
+        "start": "bun --bun nest start",
         "start:dev": "bun --hot ./src/app.ts",
         "start:prod": "bun dist/src/app",
         "lint:fix": "eslint . --fix"
@@ -17,6 +17,8 @@
         "@nestjs/common": "^11.0.12",
         "@nestjs/config": "^4.0.1",
         "@nestjs/core": "^11.0.12",
+        "@nestjs/jwt": "^11.0.0",
+        "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-fastify": "^11.0.12",
         "@nestjs/platform-socket.io": "^11.0.12",
         "@nestjs/schedule": "^5.0.1",
@@ -32,6 +34,7 @@
         "jsdom": "^26.0.0",
         "jszip": "^3.10.1",
         "minio": "^8.0.5",
+        "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.2",
         "sharp": "^0.33.5",
@@ -47,6 +50,7 @@
         "@types/bun": "^1.2.8",
         "@types/jsdom": "^21.1.7",
         "@types/node": "^22.13.10",
+        "@types/passport-jwt": "^4.0.1",
         "@typescript-eslint/parser": "^8.27.0",
         "eslint": "^9.22.0",
         "prisma": "^6.5.0",
