:sparkles: Implement admin JWT authentication and enhance user login with username or email

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ DATABASE_URL=
 APP_SECRET=supersecret
 ADMIN_KEY="admin"
 
+# First startup only
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=password@admin.com
+
 # S3
 FILESYSTEM=local#local or s3
 S3_ENDPOINT=endpoint
